--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ const posts = (await getCollection("blog"))
         >
           I design and build web and mobile apps that are easy to use,
           accessible, and thoughtfully designed. Right now, I’m working on
-          front-end at <a class="link" href="https://cape.ai">Cape</a>.
+          front-end at <a class="link" href="https://stripe.com">Stripe</a>.
         </p>
       </div>
     </section>
